# TraceGraph

./: .gitignore  README.md  pyproject.toml  requirements.txt
paper/: .gitignore  00README.json  00_abstract.tex  01_introduction.tex  02_related_work.tex  03_method.tex  04_experiments.tex  05_causal_intervention.tex  05_discussion.tex  06_limitations.tex  TEAI.cls  appendix.tex  ethics_artifacts.tex  macros.tex  main.tex  references.bib
resources/swebench_detector/: swebench_core_library.json  swebench_idf_corpus.json  swebench_nontrap_library.json  swebench_trap_diagnosis.json  swebench_trap_library.json
scripts/: run_pipeline.sh
scripts/analysis/: annotation_sampling.py  counterfactual.py  cross_benchmark.py  enhanced_separability.py  sensitivity.py  shared_vs_permodel.py  signature_ablation.py  supply_demand_decomposition.py
scripts/intervention/: README.md  build_swe_trap_diagnosis.py  build_swe_trap_library.py  detector_sweep.py  eval_patches.py  pool_analysis.py  swe_runner.py
scripts/pipeline/: build_graphs.py  compute_reward_field.py  detect_failure_basins.py  extract_signatures.py  extract_typed_dynamics.py  rollout_events.py
tracegraph/: __init__.py  constants.py  dataset.py  failure_basins.py  graph_construction.py  reward_field.py  signature.py  typed_state_mdp.py
tracegraph/sweagent/: __init__.py
