[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "tracegraph"
version = "0.1.0"
description = "Shared decision landscapes for analyzing and improving agent trajectories"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "networkx>=3.1",
    "tqdm>=4.65",
    "pandas>=2.0",
    "scikit-learn>=1.3",
    "scipy>=1.11",
    "statsmodels>=0.14",
    "huggingface_hub>=0.16",
]

[project.optional-dependencies]
intervention = [
    "litellm",
    "openai>=1.0",
]

[tool.setuptools.packages.find]
include = ["tracegraph*"]
